apps/media/qbittorrent/qbittorrent-svc.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-svc
  namespace: media
spec:
  selector:
    app: qbittorrent
  type: ClusterIP
  ports:
    - name: qbt-webui
      protocol: TCP
      port: 8080
      targetPort: qbt-webui
